fixing some stylings that got unaligned while I was working on other parts

--- a/src/app/components/BottomCards/components/CardSlide/CardSlide.css
+++ b/src/app/components/BottomCards/components/CardSlide/CardSlide.css
@@ -1,5 +1,5 @@
 .card-slide-component .card-slide-stripe {
-    transform: translateX(31.55%);
+    transform: translateX(31.25%);
 }
 
 .card-slide-component .card-item {
