--- a/src/app/components/Button/Button.css
+++ b/src/app/components/Button/Button.css
@@ -1,5 +1,5 @@
 .button-component {
-    margin: 6px 1px;
+    margin: 0px 1px 4px;
     display: flex;
     justify-content: space-between;
     width: 283px;
