--- a/src/app/css/globals.css
+++ b/src/app/css/globals.css
@@ -13,6 +13,15 @@
   max-width: 1440px;
 }
 
+/* TODO remove */
+.object-cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  opacity: .2;
+}
+
 h1,
 h5,
 p {
